build_error.log

> Task :compileJava FAILED
D:\plugins\7DeadlySins\src\main\java\com\seven\deadlysins\utils\GeometricRenderer.java:23: error: method spawn in class GeometricRenderer cannot be applied to given types;
            spawn(world, particle, loc, data);
            ^
  required: Particle,Location,Object
  found:    World,Particle,Location,Object
  reason: actual and formal argument lists differ in length
D:\plugins\7DeadlySins\src\main\java\com\seven\deadlysins\utils\GeometricRenderer.java:35: error: method spawn in class GeometricRenderer cannot be applied to given types;
            spawn(world, particle, loc, data);
            ^
  required: Particle,Location,Object
  found:    World,Particle,Location,Object
  reason: actual and formal argument lists differ in length
D:\plugins\7DeadlySins\src\main\java\com\seven\deadlysins\utils\GeometricRenderer.java:48: error: method spawn in class GeometricRenderer cannot be applied to given types;
                spawn(world, particle, loc, data);
                ^
  required: Particle,Location,Object
  found:    World,Particle,Location,Object
  reason: actual and formal argument lists differ in length
Note: D:\plugins\7DeadlySins\src\main\java\com\seven\deadlysins\features\SlothListener.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
